fixed js file
.min.js was cut off of file name

--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,10 @@ color:#000;/*black*/
 #submit{
 	padding:10px;
 }
+#draggable{
+	width:200px;
+	height:200px;
+}
 
 
 
